Bugfixes: serversettings option 1 is selected when switching backend type. Some minor empty array etc. fixes.

--- a/modules-available/locationinfo/templates/server-settings.html
+++ b/modules-available/locationinfo/templates/server-settings.html
@@ -136,7 +136,7 @@
 				$("#credentials-list").append('<div class="list-group-item"><div class="row">\
 				<div class="col-md-3"><label>{{name}}</label></div>\
 				<div class="col-md-7">\
-				<select class="form-control" id="input-{{uid}}" name="{{uid}}" form="settingsForm">\
+				<select class="form-control" id="input-selection-{{uid}}" name="{{uid}}" form="settingsForm">\
 				{{#array}}\
 				<option value="{{option}}" {{#active}}selected{{/active}}>{{option}}</option>\
 				{{/array}}\
