--- a/modules-available/permissionmanager/templates/_page.html
+++ b/modules-available/permissionmanager/templates/_page.html
@@ -1,4 +1,20 @@
-<div style="border:5px solid red">
-	<h1>{{lang_hello}}, {{foo}}</h1>
-	** {{now}} **
-</div>
+<form id="switchForm" method="GET" action="?do=permissionmanager">
+	<input type="hidden" name="do" value="permissionmanager">
+
+	<div class="btn-group">
+		<button class="btn {{rolesButtonClass}}" type="submit" name="show" value="roles">
+			<span class="glyphicon glyphicon-education"></span>
+			{{lang_Roles}}
+		</button>
+
+		<button class="btn {{usersButtonClass}}" type="submit" name="show" value="users">
+			<span class="glyphicon glyphicon-user"></span>
+			{{lang_Users}}
+		</button>
+
+		<button class="btn {{locationsButtonClass}}" type="submit" name="show" value="locations">
+			<span class="glyphicon glyphicon-home"></span>
+			{{lang_Locations}}
+		</button>
+	</div>
+</form>
