--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -301,9 +301,12 @@
 				<div id="draw-element-area" style="width:100%; height:100%;"></div>
 			</div>
 			<div id="scaleContainer">
+				<span id="zoom-fit" class="glyphicon glyphicon-move" aria-hidden="true"></span>
+				<div>
 				<div id="scaleslider"></div>
 				<span id="zoom-out" class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
 				<span id="zoom-in" class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+				</div>
 			</div>
 		</div>
 
@@ -311,7 +314,7 @@
 	</div>
 
 <div class="pull-left">
-	<div class="input-group" style="width:400px">
+	<div class="input-group" style="width:1px">
 		<div class="input-group-addon">{{lang_managerIp}}</div>
 		<input class="form-control" type="text" id="manager-ip" value="{{managerip}}" placeholder="1.2.3.4" style="width:120px">
 		<div class="input-group-addon checkbox"><input id="dedi-mgr" type="checkbox" {{dediMgrChecked}}> <label for="dedi-mgr">{{lang_dedicatedManager}}</label></div>
