--- a/modules-available/permissionmanager/templates/roleEditor.html
+++ b/modules-available/permissionmanager/templates/roleEditor.html
@@ -13,9 +13,9 @@
 	<div class="row">
 		<div class="col-md-3">
 			<b style="line-height: 34px">Locations:</b>
-			<div class="pull-right"><input name="include" {{includeChecked}} type="checkbox" id="locSwitch"></div>
+			<div class="pull-right"><input name="allLocations" {{allLocChecked}} type="checkbox" id="allLocations"></div>
 		</div>
-		<div class="col-md-9 text-left">
+		<div id="selectize-container" class="col-md-9 text-left {{selectizeClass}}">
 			<select multiple name="locations[]" id="select-location">
 				<option value></option>
 				{{#locations}}
@@ -55,13 +55,21 @@
 			plugins: [ "remove_button" ]
 		});
 
-		var locSwitch = $("#locSwitch");
-		locSwitch.bootstrapSwitch("size", "normal");
-		locSwitch.bootstrapSwitch("labelWidth", 1);
-		locSwitch.bootstrapSwitch("onText", "include");
-		locSwitch.bootstrapSwitch("offText", "exclude");
-		locSwitch.bootstrapSwitch("onColor", "success");
-		locSwitch.bootstrapSwitch("offColor", "danger");
+		var allLocations = $("#allLocations");
+		allLocations.bootstrapSwitch("size", "normal");
+		allLocations.bootstrapSwitch("labelWidth", 1);
+		allLocations.bootstrapSwitch("onText", "all");
+		allLocations.bootstrapSwitch("offText", "selected");
+		allLocations.bootstrapSwitch("onColor", "default");
+		allLocations.bootstrapSwitch("offColor", "primary");
+
+		allLocations.on('switchChange.bootstrapSwitch', function(event, state) {
+			if (state) {
+				$("#selectize-container").addClass("disabled");
+			} else {
+				$("#selectize-container").removeClass("disabled");
+			}
+		});
 
 		$("form input").keydown(function(e) {
 			if (e.keyCode === 13) e.preventDefault();
