--- a/modules-available/exams/templates/page-upcoming-lectures.html
+++ b/modules-available/exams/templates/page-upcoming-lectures.html
@@ -8,7 +8,7 @@
 			<th>{{lang_actions}}</th>
 		</tr>
 		{{#pending_lectures}}
-		<tr>
+		<tr class="{{class}}">
 			<td>
 				{{displayname}}
 				<div class="small">
@@ -30,5 +30,14 @@
 			</td>
 		</tr>
 		{{/pending_lectures}}
+		{{#decollapse}}
+		<tr class="slx-decollapse">
+			<td colspan="3">
+				<span class="btn-group btn-group-justified">
+					<span class="btn btn-default btn-sm"><span class="glyphicon glyphicon-menu-down"></span></span>
+				</span>
+			</td>
+		</tr>
+		{{/decollapse}}
 	</table>
 </div>
