[statistics] Better errormsg in install, link to projectors added

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -145,7 +145,7 @@
 							<div class="small">
 								<div class="pull-right btn-group btn-group-xs">
 									{{#projector}}
-									<span class="btn btn-default">{{lang_projector}}</span>
+									<a href="?do=statistics&amp;show=projectors" class="btn btn-default">{{lang_projector}}</a>
 									<button form="delprojector" type="submit" name="hwid" value="{{hwid}}"
 											  class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></button>
 									{{/projector}}
