[permissionmanager] changed description to tooltips

--- a/modules-available/permissionmanager/templates/permission.html
+++ b/modules-available/permissionmanager/templates/permission.html
@@ -1,6 +1,6 @@
-<li class='list-group-item'>
+<li class='list-group-item' title="{{description}}" data-toggle="tooltip" data-placement="left">
 	<div class='checkbox'>
 		<input name='permissions[]' value='{{id}}' type='checkbox' class='form-control'>
-		<label>{{name}} - {{description}}</label>
+		<label>{{name}}</label>
 	</div>
 </li>
