--- a/modules-available/permissionmanager/style.css
+++ b/modules-available/permissionmanager/style.css
@@ -47,8 +47,11 @@
 }
 
 .disabled {
-    pointer-events: none;
     opacity: 0.6;
+}
+
+input[type='checkbox']:disabled {
+    cursor: inherit;
 }
 
 .module-toggle-group {
