--- a/modules-available/locationinfo/templates/location-info.html
+++ b/modules-available/locationinfo/templates/location-info.html
@@ -137,7 +137,7 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript">
+<script type="text/javascript"><!--
 	var lastPcSubTable = false;
 
 	/**
@@ -166,6 +166,7 @@
 	function loadSettingsModal(serverid, servername) {
 		$('#myModalHeader').text("{{lang_locationSettings}}").css("font-weight", "Bold");
 		$('#myModalSubmitButton').attr("Form", "settingsForm");
+		$('#myModal .modal-dialog').css('width', '');
 		$('#myModal').modal('show');
 		$('#myModalBody').load("?do=locationinfo&action=serverSettings&id=" + serverid);
 	}
@@ -178,6 +179,7 @@
 	 */
 	function loadTimeModal(locationId, locationName) {
 		$('#myModalHeader').text("[" + locationId + "] " + locationName).css("font-weight", "Bold");
+		$('#myModal .modal-dialog').css('width', '');
 		$('#myModal').modal('show');
 		$('#myModalBody').load("?do=locationinfo&action=timetable&id=" + locationId);
 	}
@@ -191,6 +193,7 @@
 	function loadConfigModal(locationId, locationName) {
 		$('#myModalHeader').text("[" + locationId + "] " + locationName).css("font-weight", "Bold");
 		$('#myModalSubmitButton').attr("Form", "configForm");
+		$('#myModal .modal-dialog').css('width', '90%');
 		$('#myModal').modal('show');
 		$('#myModalBody').load("?do=locationinfo&action=config&id=" + locationId);
 	}
@@ -232,4 +235,4 @@
 	function addServer() {
 		loadSettingsModal(0, '');
 	}
-</script>
+//--></script>
